--- a/design.css
+++ b/design.css
@@ -237,27 +237,27 @@ ul {
 }
 
 .bloco:nth-child(1) {
-    background-image: url("images/Fone.jpg");
+    background-image: url("Images/Fone.jpg");
 }
 
 .bloco:nth-child(2) {
-    background-image: url("images/Relogio.jpg");
+    background-image: url("Images/Relogio.jpg");
 }
 
 .bloco:nth-child(3) {
-    background-image: url("images/Team.jpg");
+    background-image: url("Images/Team.jpg");
 }
 
 .apres1 {
-    background-image: url("images/Ouvindo1.jpg");
+    background-image: url("Images/Ouvindo1.jpg");
 }
 
 .apres2 {
-    background-image: url("images/Ouvindo2.jpg");
+    background-image: url("Images/Ouvindo2.jpg");
 }
 
 .apres3 {
-    background-image: url("images/Ouvindo3.jpg");
+    background-image: url("Images/Ouvindo3.jpg");
 }
 
 .center,
@@ -280,3 +280,4 @@ hummor:hover {
     transition: transform 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
 
 }
+
